fix user inteface errors on mobile and web view

--- a/click-style.css
+++ b/click-style.css
@@ -28,3 +28,7 @@
   background-color: #e05304;
   color: white;
 }
+
+.btn-style-btn {
+  width: 100vh;
+}
